--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ scikit-learn = "^1.6.1"
 seaborn = "^0.13.2"
 aif360 = {extras = ["reductions"], version = "^0.6.1"}
 blackboxauditing = "^0.1.54"
+requests = "^2.32.3"
+beautifulsoup4 = "^4.13.3"
+python-pptx = "^1.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
